# slambook

./: README.md
basic/: cmake.md  library.md  opencv.md  sophus.md
basic/code/: CMakeLists.txt  main.cpp
code/ch2/helloSLAM/: CMakeLists.txt  helloSLAM.cpp
code/ch2/libHelloSLAM/: CMakeLists.txt  libHelloSLAM.cpp  useHello.cpp
code/ch3/: README.md
code/ch3/useEigen/: CMakeLists.txt
code/ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
code/ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
code/ch4/: README.md
code/ch4/useSophus/: CMakeLists.txt  useSophus.cpp
code/ch5/: README.md
code/ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
code/ch5/joinMap/: CMakeLists.txt  joinMap.cpp
code/ch6/: README.md
code/ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
code/ch7/feature_extraction/: CMakeLists.txt  feature_extraction.cpp
code/ch7/pose_estimation_2d2d/: CMakeLists.txt  pose_estimation_2d2d.cpp
code/ch7/pose_estimation_3d2d/: CMakeLists.txt  pose_estimation_3d2d.cpp
code/ch7/pose_estimation_3d3d/: CMakeLists.txt  pose_estimation_3d3d.cpp
code/ch7/triangulation/: CMakeLists.txt  triangulation.cpp
code/ch8/Direct_semidense/: CMakeLists.txt  direct_semidense.cpp
code/ch8/Direct_sparse/: CMakeLists.txt  direct_sparse.cpp
code/ch8/LKFlow/: CMakeLists.txt  useLK.cpp
homework/: TODO.md  ch3.md
homework/ch1/: ch1.md
homework/ch2/: ch2.md
homework/ch3/: ch3.md
homework/ch4/: ch4.md
homework/ch5/: ch5.md
homework/ch6/: ch6.md
homework/ch6/code/ceres_demo/: CMakeLists.txt  main.cpp
homework/ch6/code/g2o_demo/: CMakeLists.txt  main.cpp
homework/ch7/: ch7.md
homework/ch7/code/hw10/icp/: CMakeLists.txt  hw10_2.cpp
homework/ch7/code/hw10/pnp/: CMakeLists.txt  hw10_1.cpp
homework/ch7/code/hw6/: CMakeLists.txt  hw6.cpp
homework/ch7/code/hw7/: CMakeLists.txt  hw7.cpp
homework/ch8/: ch8.md
